# backend-auth

./: config.py  main.py  misc.py  pyproject.toml
app/db/: decorators.py  models.py
app/dto/types/: datetime_without_tz.py
app/exceptions/: binding.py
app/exceptions/db/: exceptions.py  handlers.py
app/exceptions/routes/: handlers.py  models.py
app/utils/logging/: middlewares.py
app/v1/: binding.py
app/v1/docs/: hanlders.py
app/v1/schemas/: phone.py
app/v1/security/: auth.py  handlers.py  schemas.py  services.py  utils.py
app/v1/users/: handlers.py  repo.py  schemas.py  services.py
